--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "com.kylewbanks.scenerefattribute",
-    "displayName": "Scene Reference Attribute",
-    "description": "Unity C# attribute for serializing component and interface references within the scene or prefab during OnValidate, rather than using GetComponent* functions in Awake/Start/OnEnable at runtime.",
-    "version": "0.13.0",
+    "name": "com.espazioko.proceduralhitstop",
+    "displayName": "Procedural Hitstop via IK",
+    "description": "Hi ",
+    "version": "0.1.0",
     "author": {
-        "name": "Kyle Banks",
+        "name": "Alex Ruiz",
         "url": "https://github.com/NoFriendsInProgramming/procedural_hitstop_package"
     },
     "license": "MIT",
