Adding correct extension to license in json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
         "url": "https://github.com/NoFriendsInProgramming/procedural_hitstop_package"
     },
     "license": "MIT",
-    "licensesUrl": "https://github.com/NoFriendsInProgramming/procedural_hitstop_package/blob/main/LICENSE",
+    "licensesUrl": "https://github.com/NoFriendsInProgramming/procedural_hitstop_package/blob/main/LICENSE.txt",
     "documentationUrl": "https://github.com/NoFriendsInProgramming/procedural_hitstop_package/blob/main/README.md"
 }
